# an26sim

./: .gitignore  Cargo.toml  README.md  design.drawio
doc/: design.drawio
sm2-decoder/: Cargo.toml
sm2m-decoder/: Cargo.toml  README.md  build.rs  flash.sh  memory.x  openocd.cfg  upload.sh
sm2m-decoder/.cargo/: config
sm2m-decoder/src/: bus.rs  device_id.rs  led.rs  main.rs  params.rs  setup.rs
sm2m-decoder/src/cdc/: device.rs  inbound.rs  mod.rs  outbound.rs  read.rs  request.rs  response.rs  write.rs
sm2m-decoder/src/drivers/: cdc_acm.rs  cdc_acm_inbound.rs  cdc_acm_outbound.rs
sm2m-decoder/src/tasks/: bus_read.rs  handle_param.rs  handle_params.rs  mod.rs  transfer_params.rs  usb_read.rs
sm2m-decoder/src/usb/: cdc_device.rs  command.rs  mod.rs  reader.rs
sm2m-emulator/: .gitignore  Cargo.toml  README.md  upload.sh
sm2m-emulator/src/: bus.rs  data_bus.rs  generators.rs  main.rs  setup.rs  signals.rs
sm2m-emulator/src/cdc/: device.rs  inbound.rs  mod.rs  outbound.rs
sm2m-emulator/src/drivers/: cdc_acm.rs  cdc_acm_inbound.rs  cdc_acm_outbound.rs  inbound.rs  mod.rs
sm2m-emulator/src/generator/: direction.rs  mod.rs  period.rs  sequential.rs
sm2m-emulator/src/tasks/: usb_rx.rs
sm2m-encoder/: Cargo.toml  README.md  flash.sh
sm2m-encoder/src/: led.rs  main.rs  params_generator.rs
sm2m-encoder/src/cdc/: inbound.rs  mod.rs  outbound.rs
sm2m-transcoder/src-tauri/: Cargo.toml  tauri.conf.json
sm2m-transcoder/src-tauri/src/: main.rs  usb.rs
sm2m-transcoder/src-tauri/src/commands/: decoder.rs  driver.rs  mod.rs
sm2xpl/: Cargo.toml  README.md  design.drawio
sm2xpl/src/: controller.rs  lib.rs  plugin.rs  plugin_error.rs
sm2xpl/src/common/: bit.rs  bytes.rs  chain.rs  delta.rs  mod.rs  percent.rs  pipeline.rs  timer.rs
sm2xpl/src/io/: delta.rs  generator.rs  index.rs  metrics.rs  mod.rs  params.rs
sm2xpl/src/io/generator/: bounced.rs  constant.rs  generator.rs  generic.rs  helper.rs  mod.rs  parameter.rs  sequential.rs  usb.rs
sm2xpl/src/io/params/: generic.rs  input.rs  mod.rs  output.rs
sm2xpl/src/xplane/: consumer.rs  debouncer.rs  input_params.rs  input_params_consumer.rs  input_params_debouncer.rs  input_params_interpolator.rs  interpolator.rs  mapper.rs  mod.rs  output_params.rs  output_params_supplier.rs  params.rs  supplier.rs
sm2xpl/src/xplane/command/: mod.rs
sm2xpl/src/xplane/dataref/: collection.rs  mod.rs  supplier.rs  updater.rs
sm2xpl/src/xplane/dataref/variables/: engines.rs  gears.rs  general.rs  lights.rs  location.rs  mod.rs  orientation.rs  surfaces.rs  terrain_probe.rs  view.rs
sm2xpl/src/xplane/debouncer/: angular.rs  boolean.rs  generic.rs  input.rs  linear.rs  mod.rs
sm2xpl/src/xplane/debouncers/: angular.rs  boolean.rs  input.rs  linear.rs  mod.rs
sm2xpl/src/xplane/inspector/: api.rs  engines.rs  gears.rs  general.rs  helper.rs  io.rs  lights.rs  location.rs  mod.rs  orientation.rs  surfaces.rs  updater.rs  view.rs  widgets.rs  window.rs
sm2xpl/src/xplane/interpolator/: generic.rs  input.rs  mod.rs  transparent.rs
sm2xpl/src/xplane/mapper/: bit.rs  input.rs  mod.rs  output.rs
sm2xpl/src/xplane/mapper/transcoder/: altitude.rs  elevator.rs  engine.rs  flaps.rs  gear.rs  heading.rs  latitude.rs  light.rs  longitude.rs  pitch.rs  roll.rs  rudder.rs
sm2xpl/src/xplane/menu/: api.rs  error.rs  instance.rs  item.rs  mod.rs
xplane-plugin/: Cargo.toml  README.md
xplane-plugin/src/: controller.rs  lib.rs  plugin.rs  plugin_error.rs  plugin_event.rs
xplane-plugin/src/io/: input_params.rs
xplane-plugin/src/io/generator/: helper.rs  sequential.rs  usb.rs
xplane-plugin/src/shared/: delta.rs  mod.rs
xplane-plugin/src/usb/: decoder.rs  io.rs  mod.rs  thread.rs  thread_handle.rs
xplane-plugin/src/xplane/: input_params.rs  mod.rs  output_params.rs
xplane-plugin/src/xplane/command/: api.rs  command_ref_ext.rs  commands.rs
xplane-plugin/src/xplane/dataref/: mod.rs  supplier.rs  updater.rs
xplane-plugin/src/xplane/dataref/variables/: engines.rs  gears.rs  general.rs  mod.rs  surfaces.rs  view.rs
xplane-plugin/src/xplane/debouncer/: boolean.rs  transparent.rs
xplane-plugin/src/xplane/inspector/: engines.rs  error.rs  gears.rs  general.rs  io.rs  lights.rs  mod.rs  rect_ext.rs  updater.rs  view.rs  window.rs
xplane-plugin/src/xplane/mapper/: input.rs
xplane-plugin/src/xplane/mapper/transcoder/: engine.rs  longitude.rs  mod.rs  reset.rs  roll.rs
xplane-plugin/src/xplane/menu/: error.rs  instance.rs
(+48 files in other folders)
