[package]
name = "sm2m-decoder"
version = "1.0.0"
edition = "2018"

[dependencies]
# cortex-m = "0.7.3"
# cortex-m-rt = "0.6.15"
# cortex-m-semihosting = "0.3.7"
cortex-m-rtic = "0.5.8"
# embedded-hal = "0.2.6"
stm32f1xx-hal = { version = "0.7.0", features = ["rt", "stm32f103", "medium"] }
panic-halt = "0.2.0"

[[bin]]
name = "sm2m-decoder"
test = false
bench = false

[profile.release]
codegen-units = 1
lto = true
