[package]
name = "sm2m-decoder"
version = "1.0.0"
edition = "2021"

[dependencies]
panic-halt = "0.2.0"
cortex-m = "0.7.3"
usb-device = "0.2.8"
usbd-serial = "0.1.1"
cortex-m-rtic = "1.0.0"
stm32f4xx-hal = { version = "0.11.1", features = ["rt", "stm32f411", "usb_fs"] }

[[bin]]
name = "sm2m-decoder"
test = false
bench = false

[profile.release]
opt-level = "s"
codegen-units = 1
lto = true
