[package]
name = "sm2m-emulator"
version = "1.0.0"
edition = "2021"

[dependencies]
panic-halt = "0.2.0"
cortex-m = "0.7.3"
embedded-hal = "0.2.6"
usb-device = "0.2.8"
usbd-serial = "0.1.1"
cortex-m-rtic = "1.0.0"
stm32f1xx-hal = { version = "0.8.0", features = ["rt", "stm32f103", "stm32-usbd", "medium"] }

[[bin]]
name = "sm2m-emulator"
test = false
bench = false

[profile.dev]
opt-level = 1

[profile.release]
opt-level = "s"
codegen-units = 1
lto = true
